fix: change overflow property from hidden-y to hidden-x in home hero styles

--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     background-color: black;
-    overflow-y: hidden;
+    overflow-x: hidden; 
 }
 
 .hero-video {
